# road-to-the-python-assignment-1

./: .Dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.override.yaml  docker-compose.yaml  pyproject.toml
app/amazonstorage/: client.py  config.py
app/api/: config.py  dependencies.py  filters.py  headers.py  main.py  routers.py  schemas.py
app/api/tests/: conftest.py  test_endpoints.py
app/db/: client.py  config.py
app/db/dal/: pet.py  photo.py
app/db/models/: __init__.py  pet.py  photo.py
app/migrations/: env.py
app/migrations/versions/: bfaa0d2e9e8e_aab.py  c44cb0a456b5_aab.py
app/utils/: constants.py  image_convert.py  minio.py
app/utils/sql/: dal.py  function.py  types.py
